# localresearcher-ai

./: .env.example  README.md  ROADMAP.md  VISION_2.0.md  package-lock.json  pyproject.toml  run.sh
docs/: BENCHMARKS.md
src/localresearcher/agents/: __init__.py  analyst.py  critic.py  intent_classifier.py  planner.py  researcher.py  writer.py
src/localresearcher/cli/: main.py
src/localresearcher/core/: __init__.py  intent.py  logging.py  retry.py  workflow.py
src/localresearcher/llm/: base.py  ollama.py
src/localresearcher/rag/: __init__.py  chunker.py  embeddings.py  vector_store.py
tests/: test_basic.py
